[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_unittest"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example for unittest"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "scipy"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/clementsan/example_unittest"
Issues = "https://github.com/clementsan/example_unittest/issues"

[tool.setuptools.packages.find]
where = ["example"]
